style(navbar): Add new icons, Fix stylings for hover, Add temp structure for 3rd and 4th levels, Adjust size for logo on tablet+ desktop

--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -300,6 +300,7 @@
   position: relative;
   left: 0;
   z-index: 99;
+  fill: #bf0012;
 }
 
 .nav div > a:hover .imgSwap {
@@ -308,6 +309,10 @@
   margin-left: auto;
   margin-right: auto;
   height: 15px;
+}
+
+.nav div > a:hover .imgSwap {
+  fill: #bf0012;
 }
 
 .nav div > a:hover > i {
@@ -369,6 +374,22 @@
   height: 0;
   transition: 0.5s;
   z-index: 300;
+}
+
+
+.subtopic-dropdown-content li > a > label::after {
+  content: '+';
+  font-size: 22px;
+  font-weight: bold;
+  position: absolute;
+  right: 10px;
+  top: 2px;
+}
+
+.subtopic-dropdown-content li > a:hover > label::after {
+  content: '-';
+  right: 14px;
+  top: 3px;
 }
 
 .subtopic-dropdown-content li a {
@@ -584,16 +605,17 @@
   }
 
   .language-dropdown a > i::before {
-    content: 'keyboard_arrow_down';
+    content: 'keyboard_arrow_right';
+    vertical-align: -10%;
+    font-size: 8px;
   }
 
   .language-dropdown:hover a > i::before {
-    content: 'keyboard_arrow_up';
+    content: 'keyboard_arrow_down';
   }
 
   .language-dropdown a > i {
     position: relative;
-    line-height: 50%;
     font-size: 1em;
     font-weight: bold;
   }
@@ -688,19 +710,19 @@
 
   .nav > div > a > img,
   .nav > div > a > i {
-    padding-top: 9.41px;
-    margin-bottom: 4.5px;
-    height: 24px;
+    padding-top: 1px;
+    margin-bottom: 1px;
+    height: 32px;
   }
 
   .nav > div > a:hover > img,
   .nav > div > a:hover > i {
-    padding-top: 9.41px;
-    height: 24px;
+    padding-top: 1px;
+    height: 32px;
   }
 
   .nav div > a:hover .imgSwap {
-    height: 24px;
+    height: 32px;
   }
   /* ----------Accordian feature on Mobile ---------*/
   input {
@@ -721,24 +743,7 @@
     position: relative; /* ADDING THIS IS REQUIRED */
   }
 
-  label::after {
-    /* font-weight: bold;
-  position: absolute;
-  content: '+'; */
 
-    content: '+';
-    font-size: 22px;
-    font-weight: bold;
-    position: absolute;
-    right: 10px;
-    top: 2px;
-  }
-
-  label:hover::after {
-    content: '-';
-    right: 14px;
-    top: 3px;
-  }
 
   .subsubtopic-content {
     font-size: 13px;
@@ -779,8 +784,8 @@ with similar viewport measurments ***************************
   }
 
   .header .nav div > a > img {
-    display: none;
-    visibility: collapse;
+    /* display: none;
+    visibility: collapse; */
   }
 
   .categories-dropdown,
@@ -871,12 +876,14 @@ with similar viewport measurments ***************************
 
   /* Placed to try to align the logo with the categories button */
   .logo-full {
+
   }
 
   .logo-full > img {
-    width: 193px;
+    /* width: 193px; */
     height: 60px;
   }
+
   .logo-full > a {
     height: 100%;
     text-align: left;
@@ -904,6 +911,12 @@ with similar viewport measurments ***************************
     padding-left: 3px;
     padding-right: 3px;
   }
+  .header > .nav > div > a > img {
+    height: 28px;
+  }
+  .header > .nav > div > a:hover > img {
+    height: 28px;
+  }
 
   .header .nav > div {
     /* height: 100%;
@@ -930,21 +943,21 @@ with similar viewport measurments ***************************
   .header .nav > div > a.active {
     border-bottom: 2px solid #20cd84;
     color: #303030;
+    padding-top: 2px;
   }
 
   .header > .nav > div > a {
     display: inline-block;
     white-space: nowrap;
-    padding-top: 15px;
+    padding-top: 2px;
     font-size: 12px;
     color: #6b6b6b;
   }
 
   .nav div a:hover > i {
-    /* font-size: 48px; */
+
     color: #20cd84;
-    /* line-height: 100%; */
-    /* line-height: 50px; */
+
   }
   .nav .tablet-ellipsis {
     height: 100%;
@@ -966,11 +979,9 @@ with similar viewport measurments ***************************
     line-height: 10px;
   }
 
-  .nav div a:hover,
-  .language div a i,
-  .language div:hover a i {
-    background-color: transparent;
-    color: #303030;
+  .nav > div > a:hover {
+    background-color: #20cd84;
+    color: #ffffff;
     font-size: 12px;
   }
 
@@ -1153,12 +1164,14 @@ with similar viewport measurments ***************************
   }
 
   .nav .language-dropdown a > i::before {
-    content: 'keyboard_arrow_down';
+    content: 'keyboard_arrow_right';
     font-size: 12px;
+    vertical-align: -10%;
+
   }
 
   .nav .language-dropdown:hover a > i::before {
-    content: 'keyboard_arrow_up';
+    content: 'keyboard_arrow_down';
     font-size: 12px;
   }
 
@@ -1205,8 +1218,8 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
 @media only screen and (min-width: 1025px) and (max-width: 2400px) {
   /* this hides the associated icons in each link*/
   .header .nav div > a > img {
-    display: none;
-    visibility: collapse;
+    /* display: none;
+    visibility: collapse; */
   }
 
   .header-top-language-strip,
@@ -1221,11 +1234,6 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
   }
 
   .header-middle,
-  .articles img,
-  .girls img,
-  .parents img,
-  .youth img,
-  .health-providers img,
   .see-more {
     visibility: collapse;
     display: none;
@@ -1241,7 +1249,7 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
   }
 
   .logo-full > img {
-    width: 193px;
+    /* width: 193px; */
     height: 60px;
   }
 
@@ -1339,7 +1347,7 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
     background: #fff;
   }
   .header .nav > div > a:hover {
-    padding: 0;
+    /* padding: 0; */
   }
 
   .header .nav > div {
@@ -1363,14 +1371,28 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
     color: #6b6b6b;
     height: 100%;
     text-align: center;
-    padding: 20px 5px 20px 5px;
+    /* padding: 20px 5px 20px 5px; */
     border-left: 1px solid #ececec;
   }
 
   .header > .nav > div > a:hover {
-    padding-top: 5px;
+    /* padding-top: 5px;
     padding-right: 5px;
-    padding-left: 5px;
+    padding-
+    left: 5px; */
+    color:white;
+  }
+
+  .nav > div > a:hover {
+    background-color: #20cd84;
+    color: #ffffff;
+  }
+
+  .header > .nav > div > a > img {
+    height: 30px;
+  }
+  .header > .nav > div > a:hover > img {
+    height: 30px;
   }
 
   .nav div a > i {
@@ -1384,14 +1406,14 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
     font-size: 48px;
     color: #20cd84;
     line-height: 100%;
-    /* line-height: 50px; */
   }
 
-  .nav div a:hover,
-  .language div a i,
-  .language div:hover a i {
-    background-color: transparent;
-    color: #303030;
+  
+
+  .nav > div > a:hover
+  {
+    background-color: #20cd84;
+    color: #ffffff;
     font-size: 12px;
   }
 
@@ -1576,17 +1598,18 @@ DESKTOP CSS SETTTINGS. At this point, able to reuse some of the sections and inc
   }
 
   .nav .language-dropdown a > i::before {
-    content: 'keyboard_arrow_down';
+    content: 'keyboard_arrow_right';
     font-size: 12px;
+    vertical-align: -10%;
   }
 
   .nav .language-dropdown:hover a > i::before {
-    content: 'keyboard_arrow_up';
-    font-size: 12px;
+    content: 'keyboard_arrow_down';
+
   }
 
   .nav .language-dropdown a i {
-    position: relative;
+    /* position: relative; */
     font-weight: bold;
     color: #6b6b6b;
   }
